/*
 * $Id: ChangeLog,v 1.4025 2005/04/11 07:47:37 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2005-04-11 13:34 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  * source/vm/macro.c
    ! Fixed double release of an invalid macro in hb_macroCompile().

2005-04-11 00:46 UTC-0800 Ron Pinkas <Ron in xHarbour.com>
  * source/rtl/win32ole.prg
    * Fix to WideToAnsi() when converted string is empty or invalid.

2005-04-10 18:51 UTC-0800 Ron Pinkas <Ron in xHarbour.com>
  * source/compiler/harbour.sly
    * Silly typo.

2005-04-11 03:40 UTC+0200 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/source/compiler/genc.c
  * xharbour/source/compiler/genhrb.c
  * xharbour/source/compiler/harbour.c
  * xharbour/source/vm/hvm.c
  * xharbour/source/vm/runner.c
    * cleaned a little bit generated symbol scope values and fixed
      the problem with calling methods in HRB files

  * xharbour/source/vm/dynsym.c
    * enabled the runtime symbol scope checking and cloning if necessary
      symbols generated by compiler are still wrong for methods and aliases

  * xharbour/source/vm/hvm.c
    + added a small debug code to see which symbols are still wrongly
      registered - disabled by default. As far as this will not have
      been fixed in compiler the runtime hack in dynsym.c should be
      active

  * xharbour/source/vm/extend.c
    ! fixed hb_retPtr[GC] declaration

2005-04-10 14:26 UTC-0800 Ron Pinkas <Ron in xHarbour.com>
  * source/compiler/harbour.sly
    * Correction to recent optimization in offset calculation for HB_P_PUSHSYM,
      vs. HB_P_PUSHSYMNEAR in CATCH generation.

2005-04-10 12:17 UTC-0800 Ron Pinkas <Ron in xHarbour.com>
  * include/hbapirdd.h
  * source/rdd/dbcmd.c
    * Corrected usage of HB_EXPORT with compounded types.

  * source/compiler/harbour.sly